# pycounts

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycount_arinyaho/: __init__.py
tests/: test_pycount_arinyaho.py
