[tool.poetry]
name = "pycount_arinyaho"
version = "0.1.0"
description = "Word count in a text file."
authors = ["arinyaho"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
